--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -27,5 +27,36 @@
         </div>
     </div>
 
+    <table th:fragment="job-list" class="job-listing" th:each="job : ${jobs}" >
+        <th:block>
+
+            <tr>
+                <th>ID</th>
+                <th th:text="${job.id}"></th>
+            </tr>
+            <tr>
+                <th>Name</th>
+                <th th:text="${job.name}"></th>
+            </tr>
+            <tr>
+                <th>Employer</th>
+                <th th:text="${job.employer}"></th>
+            </tr>
+            <tr>
+                <th>Location</th>
+                <th th:text="${job.location}"></th>
+            </tr>
+            <tr>
+                <th>Position Type</th>
+                <th th:text="${job.positionType}"></th>
+            </tr>
+            <tr>
+                <th>Skill</th>
+                <th th:text="${job.coreCompetency}" ></th>
+            </tr>
+
+        </th:block>
+    </table>
+
 </body>
 </html>
