--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -36,7 +36,10 @@
 
     <hr />
 
+
+
     <!-- TODO #4 - Loop over the search results to display all job fields. -->
+    <table th:replace="fragments :: job-list"></table>
 
 </div>
 
